# catalog_collections

./: .gitignore  CLAUDE.md  README.md  start.sh
backend/: database.py  main.py  models.py  pyproject.toml  vision.py
frontend/src/: App.jsx  api.js
frontend/src/components/: ItemCard.jsx  PhotoUpload.jsx
frontend/src/context/: LangContext.jsx
frontend/src/pages/: AddItem.jsx  Catalog.jsx  Collection.jsx  Missing.jsx
notes/: brainstorm
